# LESS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: notes.md
resources/: README.md
resources/english2phoneme/: Makefile  README  parse.c
src/: less.h  main.c
